--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,32 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #5470f6;
+  --ifm-color-primary-dark: #2744EF;
+  --ifm-color-primary-darker: #1d34b7;
+  --ifm-color-primary-darkest: #182a92;
+  --ifm-color-primary-light: #97B2FF;
+  --ifm-color-primary-lighter: #acbff4;
+  --ifm-color-primary-lightest: #d2dcf6;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #3e89f2;
+  --ifm-color-primary-dark: #125ac0;
+  --ifm-color-primary-darker: #0e4da5;
+  --ifm-color-primary-darkest: #0b3c82;
+  --ifm-color-primary-light: #2b7bec;
+  --ifm-color-primary-lighter: #5290e8;
+  --ifm-color-primary-lightest: #71a5ed;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+code {
+  max-height: 500px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 700px;
 }
