--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,6 +8,8 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  margin: 0 auto;
+  max-width: min(60rem,100%);
 }
 
 @media screen and (max-width: 996px) {
