--- a/src/components/HomepageMain/styles.module.css
+++ b/src/components/HomepageMain/styles.module.css
@@ -10,5 +10,13 @@
   flex-direction: column;
   align-items: center;
   /* text-align: center; */
-  max-width: min(50rem,100%) !important;
+  max-width: min(45rem,100%) !important;
+}
+
+.text {
+  text-align: center;
+}
+
+.tabs {
+  margin-top: 48px;
 }
